---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: ??????
  Balances:
    - fixed hot-air in initial recipes.
--------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: ??????
  - Rebalanced Bitumen.
  - Fixed 9000k tank connecion.
  - Added new kevlar recipe.
  - Balanced tholins-to-deutherium and acetylene.
  - Advanced small parts new needs nylon, have increase output.
--------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: ??????
  - New optional recipe for hot-air.
--------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: ??????
  - Fixed deadlock in pyFE Mo setup
--------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: ??????
  - Fixed deadlock in science -2
--------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: ??????
 - Balanced more hot-air recipes.
 - Balanced drill fluids.
 - Fixed locale for combustion mixtures
--------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: ??????
 - Balanced some hot-air recipes in cross mods.
 - Fixed new tanks to their right capacity.
--------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: ??????
 - oops
--------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: ??????
 - Balanced small parts
 - Balanced natural gas and oil pumpjack recipes
 - Improved functions
 - Fixed deadlock in filters and rectisol
 - Added a bunch of alternative recipes for inserters
--------------------------------------------------------------------------------------------------